--- a/apps.html
+++ b/apps.html
@@ -14,9 +14,8 @@
 </head>
 
 <body>
-  <div id="reactContainer"></div>
-
-
+  <div id="reactApps"></div>
+  <script src="./bundle.js"></script>
 
 </body>
 
